Update Blog “2017-06-11-test”

--- a/_posts/blog/2017-06-11-test.md
+++ b/_posts/blog/2017-06-11-test.md
@@ -2,7 +2,8 @@
 layout: blog
 title: Test
 date: 2017-06-11T21:11:38.326Z
-thumbnail: /images/uploads/ako.jpg
+thumbnail: /images/uploads/vorne-rechts.jpg
 rating: '1'
 ---
 This is a test.
+
